# remote

./: CMakeLists.txt  CmakeLists.txt  app  config.cpp  file.txt  monitor.cpp  pointperfect_log_20250805_155823.txt  pointperfect_log_20250805_173458.ubx  pointperfect_log_20250810_122805.nmea  pointperfect_log_20250810_122805.ubx  pointperfect_ntrip_client.cpp  pointperfect_ntrip_client.py
SerialToUdp/: CMakeLists.txt  CMakeLists.txt.user.18dc7d6  Makefile  resources.qrc  serial-udp-middleware.service  settings.ini
SerialToUdp/res/: credentials.json
SerialToUdp/src/: GpsSerialHandler.cpp  GpsSerialHandler.h  ReceiverSerialHandler.cpp  ReceiverSerialHandler.h  UdpWorker.cpp  UdpWorker.h  main.cpp  ntripclient.cpp  ntripclient.h  udpthreadmanager.cpp  udpthreadmanager.h
code/: RTK_test.cpp  ntrip_client.cpp  zedf9r_config.cpp
code/test/: CMakeLists.txt  send_config.py  test.cpp
